// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Router Link component applies "link-icon" class when withIcon is true 1`] = `
<div>
  <a
    class="link link--gray link--icon"
    data-testid="routerLinkTestId"
    href="/"
    rel="noopener noreferrer"
    target="_blank"
  >
    Link with Icon
  </a>
</div>
`;

exports[`Router Link component renders an external link when "href" is provided 1`] = `
<div>
  <a
    class="link link--gray"
    data-testid="routerLinkTestId"
    href="https://example.com"
    rel="noopener noreferrer"
    target="_blank"
  >
    External Link
  </a>
</div>
`;

exports[`Router Link component renders an internal link when "to" is provided 1`] = `
<div>
  <a
    class="link link--gray"
    data-discover="true"
    data-testid="routerLinkTestId"
    href="/internal"
  >
    Internal Link
  </a>
  ,
</div>
`;

exports[`Router Link component renders links with colors dark 1`] = `
<div>
  <a
    class="link link--dark"
    data-testid="routerLinkTestId"
    href="/"
    rel="noopener noreferrer"
    target="_blank"
  >
    Link
  </a>
</div>
`;

exports[`Router Link component renders links with colors gray 1`] = `
<div>
  <a
    class="link link--gray"
    data-testid="routerLinkTestId"
    href="/"
    rel="noopener noreferrer"
    target="_blank"
  >
    Link
  </a>
</div>
`;

exports[`Router Link component renders links with colors green 1`] = `
<div>
  <a
    class="link link--green"
    data-testid="routerLinkTestId"
    href="/"
    rel="noopener noreferrer"
    target="_blank"
  >
    Link
  </a>
</div>
`;

exports[`Router Link component renders links with colors lightgray 1`] = `
<div>
  <a
    class="link link--lightgray"
    data-testid="routerLinkTestId"
    href="/"
    rel="noopener noreferrer"
    target="_blank"
  >
    Link
  </a>
</div>
`;
